# discord-linux-rpc

./: .gitignore  .gitmodules  README.md  meson.build  test-install.sh
discord-rpc/: .gitrepo  meson.build
discord-rpc/src/: connection_unix.cpp  discord_rpc.cpp
misc/: discord-linux-rpc.service.in  setcap-net-admin.sh
src/: discord-linux-rpc.c
subprojects/: discord-rpc
